# tape

./: .gitignore  Cargo.toml  DECISIONS.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SPEC.md  TAPE_V0_BRIEF.md  TEAM_NOTES.md  test-snapshot.tape
.claude/: settings.json
.tape-attachments/: bug-append-at-drops-fields.tape  bug-convert-blake3-0-sentinel.tape  bug-defense-in-depth-false-positive.tape  bug-diff-last-answer-wrong-annotation.tape  bug-disable-default-silent.tape  bug-fork-eject-double-terminator.tape  bug-hook-full-file-read.tape  bug-hook-pre-misses-notebookedit.tape  bug-hook-spec-noncompliance.tape  bug-jsonrpc-notifications.tape  bug-judge-flag-silent-noop.tape  bug-meta-label-not-redacted.tape  bug-overlay-notebook-edit-missed.tape  bug-parent-step-unvalidated.tape  bug-play-stub-not-resolved.tape  bug-proxy-failed-calls-no-error.tape  bug-record-label-unused.tape  bug-reserved-kind-dead.tape  bug-seek-utf8-panic.tape  bug-snapshot-timestamps-lost.tape  bug-spec-missing-diagnostic-codes.tape  bug-spillover-bypasses-redaction.tape  bug-spillover-non-string-payloads.tape  bug-taperc-never-loaded.tape  bug-taperc-typo-not-rejected.tape  bug-tool-budget-unpopulated.tape  bug-tool-eject-drops-artifacts.tape  bug-tool-eject-drops-label.tape  bug-tool-eject-hardcoded-outcome.tape  bug-tool-eject-loses-timestamps.tape  bug-unknown-kind-still-dead.tape  bug-verify-empty-prompt.tape  bug-verify-multi-task.tape  bug-verify-no-created-at-check.tape  bug-verify-shallow-secret-scan.tape  bug-wrap-pending-ttl-drops-slow-responses.tape
.tape-handoffs/: issue-109-tool-budget-unpopulated.investigation.md  issue-26-fork-eject-double-terminator.investigation.md  issue-66-spec-10-6-missing-codes.investigation.md
crates/tape-anon/: Cargo.toml
crates/tape-anon/src/: engine.rs  lib.rs  pseudonym.rs  rules.rs
crates/tape-anon/tests/: end_to_end.rs
crates/tape-cli/: Cargo.toml
crates/tape-cli/src/: main.rs  playlist.rs  self_update.rs  test_cmd.rs
crates/tape-cli/src/doctor/: catalog.rs  check.rs  mod.rs  report.rs  runner.rs
crates/tape-cli/src/doctor/checks/: binary.rs  claude_code.rs  config.rs  index.rs  mod.rs  permissions.rs  pricing.rs  signing.rs
crates/tape-cli/templates/bug-investigation/: liner-notes.md  template.yaml  tracks.jsonl
crates/tape-cli/templates/minimal/: liner-notes.md  template.yaml  tracks.jsonl
crates/tape-cli/templates/test-fixture/: liner-notes.md  template.yaml  tracks.jsonl
crates/tape-cli/tests/: annotate_integration.rs  annotate_taperc.rs  anon.rs  changelog_phase1.rs  compact_phase1.rs  diff_integration.rs  diff_judge_happy_path.rs  doctor_integration.rs  encrypt_phase1.rs  encrypt_phase2.rs  export_integration.rs  ingest_otlp_phase1.rs  killer_scenario.rs  merge_phase1.rs  playlist_phase1.rs  policy_phase1.rs  recap_auto_happy.rs  recap_integration.rs  recap_taperc.rs  record_smoke.rs  redact_test_phase1.rs  relinernote_integration.rs  relinernote_taperc.rs  relinernote_template.rs  replay_phase1.rs  rewind_list.rs  self_update_phase1.rs  sign_phase1.rs  sign_phase2.rs  tag_integration.rs  tape_new_list_describe.rs  tape_new_minimal.rs  tape_new_set_overrides.rs  tape_new_taperc.rs  tape_stats_pricing_file.rs  tape_stats_pricing_taperc.rs  tape_stats_smoke.rs  test_phase1.rs  to_fixture_phase1.rs  to_otlp_phase1.rs  (+2 more)
crates/tape-cli/tests/fixtures/pricing/: bad.toml  good.toml  stale.toml
crates/tape-diff/: Cargo.toml
crates/tape-diff/src/: judge.rs  lib.rs  narrate.rs
crates/tape-export/: Cargo.toml
crates/tape-export/src/: lib.rs
crates/tape-export/tests/: render_md_snapshots.rs
crates/tape-export/tests/snapshots/: render_md_snapshots__killer_scenario_a_md.snap  render_md_snapshots__minimal_success_md.snap  render_md_snapshots__oversized_payload_md.snap
crates/tape-format/: Cargo.toml
crates/tape-format/examples/: build_fixtures.rs
crates/tape-format/src/: artifact.rs  lib.rs  liner.rs  meta.rs  reader.rs  redactions.rs  secret_scan.rs  tracks.rs  verify.rs  writer.rs
crates/tape-format/tests/: fixture_verify.rs
crates/tape-judge/: Cargo.toml
crates/tape-judge/src/: config.rs  defense_in_depth.rs  lib.rs  record.rs
crates/tape-judge/tests/: integration.rs
crates/tape-mcp/: Cargo.toml
crates/tape-mcp-wrap/: Cargo.toml
crates/tape-mcp-wrap/examples/: mock_mcp_server.rs
crates/tape-mcp-wrap/src/: main.rs
crates/tape-mcp-wrap/tests/: wrap_integration.rs
crates/tape-mcp/src/: deck.rs  jsonrpc.rs  lib.rs  server.rs  tools.rs
crates/tape-mcp/tests/: deck_protocol.rs  eject_carries_artifacts.rs  eject_outcome.rs  eject_preserves_artifacts.rs  eject_preserves_label.rs  eject_preserves_track_metadata.rs  eject_preserves_ts.rs  notification_silence.rs  notification_suppression.rs  play_resolves_refs.rs  snapshot.rs
crates/tape-play/: Cargo.toml
crates/tape-play/src/: lib.rs  pricing.rs
crates/tape-record/: Cargo.toml
crates/tape-record/src/: eject.rs  lib.rs  overlay.rs  proxy.rs  run.rs  session.rs  socket.rs
crates/tape-record/src/proxy/: anthropic.rs  common.rs  openai.rs  stream.rs
crates/tape-record/src/runtime/: mod.rs
crates/tape-record/src/runtime/claude_code/: mod.rs  overlay.rs
crates/tape-record/src/runtime/claude_code/transcript/: convert.rs  discovery.rs  mod.rs  parser.rs
crates/tape-record/src/transcript/: convert.rs  discovery.rs  parser.rs
crates/tape-record/tests/: append_track_preserves_fields.rs  eject_drops_trailing_eject.rs  eject_redaction.rs  eject_trailing_eject.rs  hook_integration.rs  label_in_meta.rs  proxy_anthropic.rs  proxy_openai.rs  taperc_loading.rs  tool_budget_in_meta.rs
crates/tape-record/tests/fixtures/transcripts/: mcp_call.jsonl  minimal.jsonl  mixed_kinds.jsonl  orphan_tool_use.jsonl  redaction_bait.jsonl  unknown_type.jsonl  with_bash.jsonl  with_sibling_result.jsonl
crates/tape-record/tests/fixtures/transcripts/sessions/session-with-sibling-result/tool-results/: toolu_fetch_01.txt
crates/tape-redact/: Cargo.toml
crates/tape-redact/src/: config.rs  lib.rs  rules.rs
docs/: demo.tape
marketplace/: README.md
(+68 files in other folders)
