[package]
name = "tape-cli"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
version.workspace = true
description = "tape CLI — record, verify, play, ls, diff, mcp"

[lints]
workspace = true

[[bin]]
name = "tape"
path = "src/main.rs"

[dependencies]
age.workspace = true
anyhow.workspace = true
base64.workspace = true
blake3.workspace = true
chrono.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
rpassword.workspace = true
getrandom.workspace = true
http.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
reqwest.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tape-anon.workspace = true
tape-format.workspace = true
tape-play.workspace = true
tape-diff.workspace = true
tape-export.workspace = true
tape-judge.workspace = true
tape-mcp.workspace = true
tape-record.workspace = true
tape-redact.workspace = true

[dev-dependencies]
axum.workspace = true
