[package]
name = "tape-judge"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
version.workspace = true
description = "Shared judge-model client + defense-in-depth scanner for `tape` features that call out to an LLM."

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
axum.workspace = true
hyper.workspace = true
tempfile.workspace = true
