[package]
name = "tape-mcp-wrap"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
version.workspace = true
description = "JSON-RPC tee for MCP servers, used by `tape record` to capture mcp_call events."

[lints]
workspace = true

[[bin]]
name = "tape-mcp-wrap"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
tape-record = { path = "../tape-record" }
tape-format = { path = "../tape-format" }
