[package]
name = "tape-play"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
version.workspace = true
description = "Read-side tools — ls, play, seek"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
toml = { workspace = true }
tape-format.workspace = true

[dev-dependencies]
tempfile.workspace = true
